[package]
name = "ft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0"
async-std = "1"
futures = "0"
clap = { version = "4", features = ["derive"] }
libp2p = { version = "0", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
    "cbor",
    "dns",
    "kad",
    "request-response",
    "async-std",
] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }

# json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
